// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<button
  className="button"
  onClick={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <audio
    autoPlay={false}
    preload="auto"
    src={Object {}}
  />
  Test Button
</button>
`;

exports[`Form 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  Test Form
</form>
`;

exports[`Heading 1`] = `
<h1
  className="heading h1"
>
  Test Heading
</h1>
`;

exports[`InfoPanel 1`] = `
<div
  className="panel left-panel"
>
  <div
    className="heading h6"
  >
    Позывной:
  </div>
  <div
    className="heading h6"
  />
  <div
    className="flex-wrapper"
  />
  <div>
    Валюта:
  </div>
  <div>
     
    <img
      alt="coin"
      className="img-in-line"
      src={Object {}}
    />
  </div>
  <div
    className="flex-wrapper"
  />
  <div>
    Награды: 
  </div>
  <div>
     
    <img
      alt="award"
      className="img-in-line"
      src={Object {}}
    />
  </div>
</div>
`;

exports[`Input 1`] = `
<label
  className="input-container"
>
  <input
    className="input"
    onChange={[Function]}
    onClick={[Function]}
  />
  <span
    className="input-label"
  >
    Input
  </span>
</label>
`;

exports[`Message 1`] = `
<div
  className="message text-field"
>
  <div
    className="message-author"
  >
    
        
    ??.??.???? ??:??
  </div>
  <div
    className="message-edit"
  >
    <button
      className="imgButton message-button"
      onClick={[Function]}
      type="button"
    >
      <img
        alt="Редактировать"
        height="16px"
        src={Object {}}
        width="16px"
      />
    </button>
  </div>
  <div
    className="message-delete"
  >
    <button
      className="imgButton message-button"
      onClick={[Function]}
      type="button"
    >
      <img
        alt="Удалить"
        height="16px"
        src={Object {}}
        width="16px"
      />
    </button>
  </div>
  <div
    className="message-content"
  >
    <div />
  </div>
</div>
`;

exports[`TextArea 1`] = `
<label
  className="text-area-container"
>
  <span
    className="text-area-label"
  >
    Test TextArea
  </span>
  <textarea
    className="text-area"
  />
</label>
`;

exports[`Topic 1`] = `
<a
  href=""
  onClick={[Function]}
>
  <div
    className="topic text-field"
  >
    <div
      className="topic-dateTime text-field"
    >
      Создана: 
      <b>
        ??.??.???? ??:??
      </b>
    </div>
    <div
      className="topic-author text-field"
    >
      Автор: 
      <b>
        0
      </b>
    </div>
    <div
      className="topic-mes-count text-field"
    >
      Сообщений: 
      1
      <b>
         (1)
      </b>
    </div>
    <div
      className="topic-edit"
    >
      <button
        className="imgButton topic-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="Редактировать"
          height="16px"
          src={Object {}}
          width="16px"
        />
      </button>
    </div>
    <div
      className="topic-delete topic_hidden"
    >
      <button
        className="imgButton topic-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="Удалить"
          height="16px"
          src={Object {}}
          width="16px"
        />
      </button>
    </div>
    <div
      className="topic-content"
    >
      <div />
    </div>
  </div>
</a>
`;
